--- a/repository.yaml
+++ b/repository.yaml
@@ -1,3 +1,3 @@
-name: Chirpstack Add-On Repository
-url: https://github.com/ezand/chirpstack-addon-repository
-maintainer: Eirik Sand <eiriksand@gmail.com>
+name: Chirpstack v4 Add-On Repository
+url: https://github.com/Tathar/chirpstack-addon-repository
+maintainer: Pierre-Emmanuel DOUET  <tathar.dev@gmail.com>
